--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+  <h1><font color="red"> Hello World</h1></font>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
